--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ May your day be magical and absolutely top-notch!
         <div class="container">
           <div class="row">
             <div class="section-title">
-              <h2>recent work</h2>
+              <h2>Jaya Prakash</h2>
             </div>
           </div>
           <div class="row">
